--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     url: jdbc:mysql://115.29.79.115:3306/wll_text
     username: 51growup
     password: zmz152653
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
-    jpa:
+  jpa:
       hibernate:
         ddl-auto: update
       show-sql: true
